Corrigo gitgnore de las imagenes de las subcarpetas de multimedia

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-multimedia/*.png
-multimedia/*.jpg
-multimedia/*.jpeg
-multimedia/*.gif
-multimedia/*.bmp
-multimedia/*.svg
-multimedia/*.webp
+multimedia/**/*.png
+multimedia/**/*.jpg
+multimedia/**/*.jpeg
+multimedia/**/*.gif
+multimedia/**/*.bmp
+multimedia/**/*.svg
+multimedia/**/*.webp
 !multimedia/imagenPerfil/.gitkeep
